<resources>
    <string name="app_name">Weather Forecast</string>
    <string name="action_settings">Settings</string>
    <string name="splashScreen">Splash Activity</string>
    <string name="app_icon">application icon</string>
    <string name="get_started">Let\'s get started</string>
    <string name="cities_you_want">Enter cities below</string>
    <string name="pune_mumbai">e.g. Pune, Mumbai</string>
    <string name="or">--or--</string>
    <string name="locate_me">Locate me</string>
    <string name="weather_forecast_caps">WEATHER FORECAST</string>
    <string name="city_name">%1$s , %2$s</string>
    <string name="default_date">%1$s</string>
    <string name="default_humidity">Humidity : %1$d%%</string>
    <string name="default_pressure">Pressure : %1$.2f hPa</string>
    <string name="default_weather">%1$s</string>
    <string name="default_max_temp">Max : %1$.2f \u00B0C</string>
    <string name="default_min_temp">Min : %1$.2f \u00B0C</string>
    <string name="fetching_weather">Fetching weather forecast...</string>
    <string name="location_disallowed">Accessing location has not been allowed!</string>
    <string name="fetching_user_location">Fetching user location...</string>
    <string name="not_connected">You are currently not connected to the internet.</string>
    <string name="empty_cities">Cities field cannot be empty</string>
    <string name="enter_valid_cities">Enter valid cities</string>
    <string name="done">Done</string>
</resources>
