<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="5dp"
    card_view:cardCornerRadius="4dp"
    card_view:contentPadding="10dp"
    card_view:cardBackgroundColor="@color/transparent_black_50">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/layout_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_date"
                style="@style/default_bold_text"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:text="@string/default_date" />


            <ImageView
                android:id="@+id/iv_weather_icon"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:scaleType="fitXY"
                android:src="@drawable/d01" />


            <TextView
                android:id="@+id/tv_weather_condition"
                style="@style/default_text"
                android:layout_width="100dp"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@id/iv_weather_icon"
                android:singleLine="false"
                android:textSize="18sp"
                tools:text="@string/default_weather"
                android:capitalize="words"/>
        </RelativeLayout>

        <View
            android:id="@+id/seperator"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/layout_date"
            android:layout_marginTop="5dp"
            android:background="@android:color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/seperator"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/layout_max_min"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tv_min_temp"
                    style="@style/default_text"
                    android:layout_weight="0.5"
                    android:gravity="left"
                    android:textSize="17sp"
                    tools:text="@string/default_min_temp" />

                <TextView
                    android:id="@+id/tv_max_temp"
                    style="@style/default_text"
                    android:layout_weight="0.5"
                    android:gravity="left"
                    android:textSize="17sp"
                    tools:text="@string/default_max_temp" />


            </LinearLayout>

            <TextView
                android:id="@+id/tv_humidity"
                style="@style/default_text"
                android:layout_marginTop="5dp"
                android:textSize="17sp"
                tools:text="@string/default_humidity" />

            <TextView
                android:id="@+id/tv_pressure"
                style="@style/default_text"
                android:layout_marginTop="5dp"
                android:textSize="17sp"
                tools:text="@string/default_pressure" />
        </LinearLayout>
    </RelativeLayout>
</android.support.v7.widget.CardView>